<?xml version="1.0"?>
<package format="3">
  <name>ballbot_control</name>
  <version>0.0.1</version>
  <description>Ballbot ROS2 control package with IMU, encoders, KF, LQR, motor interface</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
